--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -8,7 +8,7 @@
     "description":"Application description"
   },
   "appTitlePopup": {
-  	"message": "SaPi [TruckersMP]",
+  	"message": "SaPI Reborn",
   	"description": "Title for popup icon in browser"
   },
   "optSecShort": {
